# AMD-NFS

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml  py-ml-ci.yml
cmd/server/: CMakeLists.txt  amdinfer_ctl  built.go  go.mod  main.go
py/: CMakeLists.txt  README.md  inference.cpp  inference.pyx  pyproject.toml  requirements.txt  setup.py
py/amdinfer_ml/: __init__.py  cli.py  session.py
py/amdinfer_py/: __init__.py
py/amdinfer_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
py/tests/: conftest.py  test_amdinfer_ml.py  test_inference.py
src/c/: CMakeLists.txt  demo_alloc.c  hip_kernels.c  slab_allocator.c  slab_allocator.h  test_slab.c
src/cpp/: CMakeLists.txt  engine.cpp  engine.hpp  kv_cache.cpp  kv_cache.hpp  model.cpp  model.hpp  sampler.cpp  sampler.hpp  samplier.hpp  tokenizer.cpp  tokenizer.hpp
